<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileFragment"
    android:background="@color/light_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="30dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="25sp"
            android:textColor="@color/light_blue"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/userimage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:background="@drawable/round_background"
            android:src="@drawable/placeholder_image" />

        <TextView
            android:id="@+id/change_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/change_image"
            android:textSize="15sp"
            android:textColor="@color/light_blue"/>



        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="20dp"
            android:rowCount="6">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:gravity="center"
                android:layout_column="0"
                android:layout_row="0"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_columnWeight="1" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/light_blue"
                android:textColorHighlight="@color/light_blue"
                android:backgroundTint="@color/light_blue"
                android:gravity="center"
                android:text="Username"
                android:inputType="text"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_columnWeight="3" />
<!--        </GridLayout>-->

<!--        <GridLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:columnCount="2"-->
<!--            android:padding="20dp"-->
<!--            android:rowCount="6">-->

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:gravity="center"
                android:layout_column="0"
                android:layout_row="1"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_columnWeight="1" />

            <EditText
                android:id="@+id/useremail"
                android:inputType="textEmailAddress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/light_blue"
                android:textColorHighlight="@color/light_blue"
                android:backgroundTint="@color/light_blue"
                android:gravity="center"
                android:text="Email"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_columnWeight="3" />
<!--        </GridLayout>-->
<!--        -->
<!--        -->
<!--        <GridLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:columnCount="2"-->
<!--            android:padding="20dp"-->
<!--            android:rowCount="6">-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/phoneno"
                android:gravity="center"
                android:layout_column="0"
                android:layout_row="2"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_columnWeight="1" />
            <EditText
                android:id="@+id/userphoneno"
                android:inputType="phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/light_blue"
                android:textColorHighlight="@color/light_blue"
                android:backgroundTint="@color/light_blue"
                android:gravity="center"
                android:text="PhoneNo"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_columnWeight="3" />
<!--         </GridLayout>-->


<!--        <GridLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:columnCount="2"-->
<!--            android:padding="20dp"-->
<!--            android:rowCount="6">-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:gravity="center"
                android:layout_column="0"
                android:layout_row="3"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_columnWeight="1" />
            <EditText
                android:id="@+id/userpassword"
                android:inputType="textPassword"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/light_blue"
                android:textColorHighlight="@color/light_blue"
                android:backgroundTint="@color/light_blue"
                android:gravity="center"
                android:text="Password"
                android:layout_column="1"
                android:layout_row="3"
                android:layout_columnWeight="3" />
<!--        </GridLayout>-->

<!--        <GridLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:columnCount="2"-->
<!--            android:padding="20dp"-->
<!--            android:rowCount="6">-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/address"
                android:gravity="center"
                android:layout_column="0"
                android:layout_row="4"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_columnWeight="1" />
            <EditText
                android:id="@+id/useradderess"
                android:inputType="text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textColor="@color/light_blue"
                android:textColorHighlight="@color/light_blue"
                android:backgroundTint="@color/light_blue"
                android:gravity="center"
                android:text="Address"
                android:layout_column="1"
                android:layout_row="4"
                android:layout_columnWeight="3" />
        </GridLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/light_blue"
            android:text="@string/update"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"/>






    </LinearLayout>

    </LinearLayout>




</FrameLayout>